--- a/css/site.css
+++ b/css/site.css
@@ -11,6 +11,41 @@
     font-weight: normal;
     font-style: normal;
 }
+
+/**
+ * Interesting animation
+ */
+@-webkit-keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {-webkit-transform: translateY(0);}
+    40% {-webkit-transform: translateY(-884px);}
+    60% {-webkit-transform: translateY(-442px);}
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+    40% {transform: translateY(-884px);}
+    60% {transform: translateY(-442px);}
+}
+
+/**
+ * Misc. stuff
+ */
+::-webkit-input-placeholder {
+    color: #333;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+    color: #333;
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+    color: #333;
+}
+
+:-ms-input-placeholder {
+    color: #333;
+}
+
 /**
  * General tag styles
  */
@@ -25,59 +60,282 @@ body {
  */
 .site-section {
     height: 720px;
-    overflow: hidden;
+    overflow: auto;
     position: relative;
     z-index: 0;
 }
+
+.column {
+    height: 100%;
+    margin: auto;
+    overflow: hidden;
+    position: relative;
+    width: 1240px;
+}
+
+.phone-image {
+    float: left;
+    height: 623px;
+    position: absolute;
+    width: 343px;
+    z-index: 1;
+}
+
+.people-row {
+    float: left;
+    width: 650px;
+}
+.people-row.offset-left {
+    margin-left: 105px;
+}
+.people-row.first {
+    margin-bottom: -45px;
+}
+.people-row.last {
+    margin-top: -45px;
+}
+.person-hex {
+    margin: 0 5px;
+}
+.visible {
+    z-index: 2;
+}
 .section-block {
-    margin-left: 5em;
     width: 550px;
+}
+.section-block.black {
+    color: #000;
+    text-align: center;
+}
+.section-block.left {
+    float: left;
+}
+.section-block.right {
+    float: right;
 }
 
 .section-title {
     display: block;
-    font-size: 4em;
+    font-size: 3em;
+    margin-left: 30px;
 }
 
 .section-text {
     font-size: 1.5em;
+    margin-left: 30px;
+}
+
+.contact-icon {
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.contact-icon-link {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    height: 60px;
+    width: 60px;
+}
+
+.social-media-item {
+    display: inline-block;
+    margin: 0 10px;
 }
 
 .shadow-overlay {
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0));
+    background: linear-gradient(90deg, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0));
     height: 100%;
     left: 0;
-    position: fixed;
+    position: absolute;
     top: 0;
     width: 100%;
     z-index: -1;
+}
+
+.progress-bar {
+    background-color: #fff;
+    height: 10px;
+    width: 100%;
+}
+
+.progress-bar.active {
+    background-color: gainsboro;
+}
+
+.progress-bar.hidden {
+    visibility: hidden;
+}
+
+.progress-bar-filled {
+    height: 10px;
+    transition: width 1s linear;
+    width: 0;
+}
+
+.explanation-cell {
+    height: 150px;
+    overflow: auto;
+    width: 420px;
+}
+
+.explanation-cell.active {
+    background-color: #F6F6F6;
+}
+
+.explanation-icon-container {
+    align-items: center;
+    display: flex;
+    float: left;
+    height: 140px;
+    width: 100px;
+}
+.explanation-icon {
+    display: block;
+    margin: auto;
+    position: relative;
+}
+.explanation-text {
+    align-items: center;
+    display: flex;
+    font-size: 1.7em;
+    height: 140px;
+    margin: 0;
+}
+
+.invite-form {
+    margin-left: 30px;
+    margin-top: 140px;
+    position: relative;
+    width: 80%;
+}
+
+.invite-form.secondary {
+    margin-left: 60px;
+    margin-top: 0;
+}
+
+.invite-label {
+    height: 24px;
+    left: 15px;
+    position: absolute;
+    top: 18px;
+    width: 36px;
+}
+
+.secondary-heading {
+    font-size: 2em;
+    margin-top: 60px;
+    text-align: center;
+}
+
+.invite-input {
+    border: 0;
+    border-radius: 5px;
+    font-size: 1.3em;
+    height: 60px;
+    outline: 0;
+    padding: 0 100px 0 70px;
+    width: 60%;
+}
+
+.invite-submit {
+    background-color: #00A499;
+    border: 0;
+    border-radius: 0 5px 5px 0;
+    color: #ffffff;
+    height: 100%;
+    position: absolute;
+    right: 6px;
+    width: 100px;
+}
+
+.invite-submit.secondary {
+    background-color: #F5A623;
+}
+
+.cute-little-bar {
+    background-color: #fff;
+    display: block;
+    height: 5px;
+    margin-left: 30px;
+    margin-top: 200px;
+    width: 120px;
+}
+.cute-little-bar.blue {
+    background-color: #6F9CD9;
+}
+.cute-little-bar.purple {
+    background-color: #8E288C;
+    margin-left: 230px;
 }
 
 /**
  * ID specific styles
  */
 #logo {
-    margin-left: 5em;
+    margin-left: 30px;
     margin-top: 2em;
     z-index: 2;
 }
 
 #play-url {
-    bottom: 2em;
+    bottom: 70px;
     right: 2em;
     position: absolute;
 }
 
 #banner {
     background-image: url(../img/LadiesForrest_1680x1050px.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#people {
+    margin-top: 65px;
 }
 
 #explanation {
     background-color: #fff;
 }
 
+#explore-image-container {
+    float: right;
+    overflow: hidden;
+}
+
+#explore-image {
+    -webkit-animation-name: bounce;
+    animation-name: bounce;
+    -webkit-animation-duration: 20s;
+    animation-duration: 20s;
+    -webkit-animation-fill-mode: both;
+    animation-fill-mode: both;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+}
+
+#phone-block {
+    float: left;
+    height: 623px;
+    margin-left: 310px;
+    margin-top: 60px;
+    overflow: auto;
+    position: relative;
+    width: 343px;
+}
+
+#explanation-block {
+    color: #000;
+    float: left;
+    margin-left: -23px;
+    margin-top: 160px;
+    position: relative;
+    z-index: -1;
+}
+
 #explore {
-    background-color: teal;
+    background-color: #00A499;
 }
 
 #connect {
@@ -86,16 +344,102 @@ body {
 
 #share {
     background-image: url(../img/FirstAcces_1680X1050px.jpg);
+    background-position: right;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#teal-bar {
+    background-color: #00A499;
+}
+
+#purple-bar {
+    background-color: #8E288C;
+}
+
+#blue-bar {
+    background-color: #6F9CD9;
 }
 
 #invite-signup {
-    background-color: teal;
-    height: 200px;
+    background-color: #00A499;
+    height: 280px;
 }
 
 #site-footer {
     background-color: #000;
+    height: 100px;
 }
+
+#copyright-text {
+    float: right;
+    font-size: 0.7em;
+    line-height: 100px;
+}
+
+#social-media-list {
+    list-style-type: none;
+    padding: 0;
+    text-align: center;
+}
+
+#vurze-footer-logo {
+    margin-left: 30px;
+    margin-top: 20px;
+}
+
+#facebook-icon {
+    background-image: url(../img/Icon_Facebook_White.png);
+    height: 41px;
+    width: 20px;
+}
+
+#twitter-icon {
+    background-image: url(../img/Icon_Twitter_White.png);
+    height: 34px;
+    width: 40px;
+}
+
+#instagram-icon {
+    background-image: url(../img/Icon_Instagram_White.png);
+    height: 41px;
+    width: 40px;
+}
+
+#maps-icon {
+    background-image: url(../img/Icon_Marker_White.png);
+    height: 40px;
+    width: 25px;
+}
+
+#mail-icon {
+    background-image: url(../img/Icon_Email_White.png);
+    height: 33px;
+    width: 51px;
+}
+
+#facebook-icon:hover {
+    background-image: url(../img/Icon_Facebook_Javalight.png);
+}
+
+#twitter-icon:hover {
+    background-image: url(../img/Icon_Twitter_Javalight.png);
+}
+
+
+#instagram-icon:hover {
+    background-image: url(../img/Icon_Instagram_Javalight.png);
+}
+
+#maps-icon:hover {
+    background-image: url(../img/Icon_Marker_Javalight.png);
+}
+
+#mail-icon:hover {
+    background-image: url(../img/Icon_Email_Javalight.png);
+}
+
+
 
 @media (max-width: 920px) {
     .site-section {
