--- a/css/site.css
+++ b/css/site.css
@@ -31,19 +31,19 @@
  * Misc. stuff
  */
 ::-webkit-input-placeholder {
-    color: #333;
+    color: #9B9B9B;
 }
 
 :-moz-placeholder { /* Firefox 18- */
-    color: #333;
+    color: #9B9B9B;
 }
 
 ::-moz-placeholder {  /* Firefox 19+ */
-    color: #333;
+    color: #9B9B9B;
 }
 
 :-ms-input-placeholder {
-    color: #333;
+    color: #9B9B9B;
 }
 
 /**
@@ -70,13 +70,16 @@ body {
     margin: auto;
     overflow: hidden;
     position: relative;
-    width: 1240px;
+    width: 1280px;
+    z-index: 0;
 }
 
 .phone-image {
     float: left;
     height: 623px;
+    opacity: 0;
     position: absolute;
+    transition: opacity .2s linear;
     width: 343px;
     z-index: 1;
 }
@@ -95,10 +98,13 @@ body {
     margin-top: -45px;
 }
 .person-hex {
+    height: 100%;
     margin: 0 5px;
+    width: 30%;
 }
 .visible {
-    z-index: 2;
+    opacity: 1;
+    transition: opacity .2s linear;
 }
 .section-block {
     width: 550px;
@@ -179,6 +185,11 @@ body {
     width: 420px;
 }
 
+.explanation-cell:hover {
+    background-color: #F6F6F6;
+    cursor: pointer;
+}
+
 .explanation-cell.active {
     background-color: #F6F6F6;
 }
@@ -232,7 +243,8 @@ body {
 .invite-input {
     border: 0;
     border-radius: 5px;
-    font-size: 1.3em;
+    font-family: "ProximaNova-Light", sans-serif;
+    font-size: 16px;
     height: 60px;
     outline: 0;
     padding: 0 100px 0 70px;
@@ -244,7 +256,9 @@ body {
     border: 0;
     border-radius: 0 5px 5px 0;
     color: #ffffff;
+    cursor: pointer;
     height: 100%;
+    outline: 0;
     position: absolute;
     right: 6px;
     width: 100px;
@@ -441,88 +455,4 @@ body {
 
 #mail-icon:hover {
     background-image: url(../img/Icon_Email_Javalight.png);
-}
-
-
-
-@media (max-width: 920px) {
-    .site-section {
-        height: 645px;
-    }
-    .section-block {
-        margin-left: 1.5em;
-    }
-
-    .section-title {
-        font-size: 2em;
-        margin-bottom: 0.5em;
-        width: 170px;
-    }
-
-    .section-text {
-        font-size: 1em;
-        margin-top: 0;
-        width: 230px;
-    }
-
-    .invite-form {
-        margin-top: 4em;
-        position: relative;
-        width: 80%;
-    }
-
-    .invite-input {
-        border: 0;
-        border-radius: 3px;
-        height: 3.5em;
-        padding: 0 2em;
-        width: 60%;
-    }
-
-    .invite-submit {
-        background-color: #00A499;
-        border: 0;
-        border-radius: 0 3px 3px 0;
-        color: #ffffff;
-        height: 100%;
-        position: absolute;
-        right: 100px;
-        width: 100px;
-    }
-
-    .email-label-image {
-        height: 17px;
-        left: 1em;
-        position: absolute;
-        top: 0.9em;
-        width: 26px;
-    }
-
-    #logo {
-        height: 46px;
-        margin-left: 1.5em;
-        margin-top: 1.5em;
-        width: 121px;
-    }
-
-    #banner {
-        background-position-x: 73%;
-        background-position-y: 100%;
-        background-size: 1176px 735px;
-    }
-
-    #banner-block {
-        margin-top: 8.5em;
-    }
-
-    #play-url {
-        height: 31px;
-        right: 1.5em;
-        top: 2em;
-    }
-
-    #play-image {
-        height: 31px;
-        width: 92px;
-    }
 }
