--- a/css/site.css
+++ b/css/site.css
@@ -245,6 +245,7 @@ body {
 }
 
 .invite-input {
+    -webkit-appearance: none;
     border: 0;
     border-radius: 5px;
     font-family: "ProximaNova-Light", sans-serif;
@@ -456,6 +457,15 @@ body {
     line-height: 100px;
 }
 
+#copyright-text > a {
+    color: inherit;
+    text-decoration: none;
+}
+
+#copyright-text > a:hover {
+    text-decoration: underline;
+}
+
 #social-media-list {
     list-style-type: none;
     padding: 0;
@@ -631,6 +641,7 @@ body {
     }
 
     #secondary-email-input {
+        -webkit-appearance: none;
         padding-right: 46px;
         width: 45%;
     }
@@ -652,6 +663,7 @@ body {
     }
 
     .invite-input {
+        -webkit-appearance: none;
         border: 0;
         border-radius: 3px;
         height: 3.5em;
