Little bar color fix

--- a/css/site.css
+++ b/css/site.css
@@ -274,7 +274,7 @@ body {
 }
 
 .cute-little-bar {
-    background-color: #489DDA;
+    background-color: #FFF;
     display: block;
     height: 5px;
     margin-left: 30px;
