--- a/css/site.css
+++ b/css/site.css
@@ -93,18 +93,25 @@ body {
     width: 650px;
 }
 .people-row.offset-left {
-    margin-left: 105px;
+    margin-left: 93px;
 }
 .people-row.first {
-    margin-bottom: -45px;
+    margin-bottom: -40px;
 }
 .people-row.last {
-    margin-top: -45px;
+    margin-top: -40px;
 }
 .person-hex {
-    height: 100%;
-    margin: 0 5px;
-    width: 30%;
+    float: left;
+    margin: 5px 0;
+}
+.person-hex:nth-child(2) {
+    margin-left: -7px;
+    margin-top: 4px;
+}
+.person-hex:nth-child(3) {
+    margin-left: -7px;
+    margin-top: 2px;
 }
 .visible {
     opacity: 1;
@@ -151,16 +158,6 @@ body {
 .social-media-item {
     display: inline-block;
     margin: 0 10px;
-}
-
-.shadow-overlay {
-    background: linear-gradient(90deg, rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0));
-    height: 100%;
-    left: 0;
-    position: absolute;
-    top: 0;
-    width: 100%;
-    z-index: -1;
 }
 
 .progress-bar {
@@ -212,8 +209,9 @@ body {
 }
 .explanation-text {
     align-items: center;
+    color: #4A4A4A;
     display: flex;
-    font-size: 1.7em;
+    font-size: 24px;
     height: 140px;
     margin: 0;
 }
@@ -234,7 +232,7 @@ body {
     height: 24px;
     left: 15px;
     position: absolute;
-    top: 18px;
+    top: 13px;
     width: 36px;
 }
 
@@ -250,7 +248,7 @@ body {
     border-radius: 5px;
     font-family: "ProximaNova-Light", sans-serif;
     font-size: 16px;
-    height: 60px;
+    height: 50px;
     outline: 0;
     padding: 0 100px 0 70px;
     width: 60%;
@@ -299,9 +297,9 @@ body {
 }
 
 #play-url {
-    bottom: 70px;
-    right: 2em;
     position: absolute;
+    right: 2em;
+    top: 2em;
 }
 
 #banner {
