--- a/css/site.css
+++ b/css/site.css
@@ -12,6 +12,19 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'proxima_nova_ththin';
+    src: url('../fonts/proxima_nova_thin-webfont.eot');
+    src: url('../fonts/proxima_nova_thin-webfont.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/proxima_nova_thin-webfont.woff2') format('woff2'),
+    url('../fonts/proxima_nova_thin-webfont.woff') format('woff'),
+    url('../fonts/proxima_nova_thin-webfont.ttf') format('truetype'),
+    url('../fonts/proxima_nova_thin-webfont.svg#proxima_nova_ththin') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 /**
  * Interesting animation
  */
@@ -133,6 +146,7 @@ body {
 
 .section-title {
     display: block;
+    font-family: 'proxima_nova_ththin', sans-serif;
     font-size: 3em;
     margin-left: 30px;
 }
