--- a/css/site.css
+++ b/css/site.css
@@ -304,16 +304,29 @@ body {
 /**
  * ID specific styles
  */
+#header {
+    background-color: transparent;
+    height: 80px;
+    position: fixed;
+    transition: background-color 0.2s linear;
+    width: 100%;
+    z-index: 2;
+}
+#header.black {
+    background-color: #000;
+    transition: background-color 0.2s linear;
+}
+
 #logo {
     margin-left: 30px;
-    margin-top: 2em;
+    margin-top: 13px;
     z-index: 2;
 }
 
 #play-url {
     position: absolute;
-    right: 2em;
-    top: 2em;
+    right: 15px;
+    top: 15px;
 }
 
 #banner {
@@ -458,15 +471,14 @@ body {
     height: 280px;
 }
 
-#site-footer {
-    background-color: #000;
-    height: 100px;
-}
-
 #copyright-text {
-    float: right;
+    bottom: 5px;
+    color: #fff;
     font-size: 0.7em;
-    line-height: 100px;
+    left: 0;
+    position: absolute;
+    text-align: center;
+    width: 100%;
 }
 
 #copyright-text > a {
