--- a/css/site.css
+++ b/css/site.css
@@ -394,7 +394,7 @@ body {
 }
 
 #shadow-overlay {
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.7);
     display: none;
     height: 100%;
     position: fixed;
@@ -420,6 +420,7 @@ body {
 #share-overlay-title {
     border-bottom: 1px solid #DEDEDE;
     color: #00A499;
+    font-family: 'proxima_nova_ththin', sans-serif;
     font-size: 2.4em;
     margin: 0 20px;
     padding: 30px 0;
